# Interactive-Graphics

./: .gitignore  CMakeLists.txt  README.md  build.ps1
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
include/glad/: glad.h
include/header_files/: EBO.h  VBO.h  shaderClass.h
src/: CMakeLists.txt  EBO.cpp  VAO.cpp  VAO.hpp  VBO.cpp  glad.c  hello.cpp  main.cpp  shaderClass.cpp  triangle.cpp
